--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -74,6 +74,9 @@
 \bibliography{thesis}           % dit bestand bevat informatie die
                                 %door bibtex wordt gelezen
 
+
+\renewcommand{\baselinestretch}{1.2}
+
 \printindex
 
 \end{document}
