--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -76,7 +76,6 @@ een supremum en een infimum bezit, dan is $(L, \le)$ een complete tralie.
 Het \defin{universum} is de collectie van alle mogelijke elementen (bijvoorbeeld de
 natuurlijke getallen). Een verzameling bevat bepaalde elementen uit dat universum (bijvoorbeeld de 
 verzameling van de priemgetallen). 
-
 In het geval van een \defin{scherpe (deel)verzameling} behoort elk 
 element uit het universum wel of niet tot de verzameling. Andere mogelijkheden zijn er
 niet. Een dergelijke verzameling kan bijgevolg 
@@ -112,7 +111,7 @@ afbeelding  $\mu_A$:
 Een element $x \in X$ behoort dus tot de vaagverzameling $A$ met lidmaatschapsgraad $\mu_A(x)$.
 Voor de eenvoud noteren we in het vervolg $\mu_A(x)$ steeds als $A(x)$. We maken
 met andere woorden geen onderscheid tussen de vaagverzameling en de 
-lidmaatschapsfunctie. Voor de klasse van vaagverzamelingen in een universum $X$ gebruiken we
+lidmaatschapsfunctie. Voor de klasse van vaagverzamelingen in een universum $X$, gebruiken we
 de notatie $\mathcal{F}(X)$.
 % beter geen nieuwe paragraaf volgens Stefan
 De \defin{drager} en de \defin{kern} van een vaagverzameling zijn twee belangrijke begrippen: 
@@ -134,7 +133,7 @@ eindige scherpe verzameling wordt gegeven door het aantal elementen in die verza
 Dat concept kan uitgebreid worden naar vaagverzamelingen door gebruik te maken van het begrip 
 \defin{sigma count}:
 \begin{definitie}
-De sigma count van een vaagverzameling $A$ met eindige drager in een universum $X$ wordt
+De sigma count van een vaagverzameling $A$ met eindige drager in een universum $X$, wordt
 gedefinieerd door:
 \begin{displaymath}
 |A|=\sum_{x \in X} A(x)
@@ -165,7 +164,7 @@ $\mathcal{D}(0,0)=0$. Als een disjunctor voldoet aan
 $(\forall a \in [0,1])(\mathcal{D}(0,a)=\mathcal{D}(a,0)=a)$ dan is het een semi-conorm.
 Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 \end{definitie}
-
+\noindent
 De meest gebruikte negator is de standaardnegator $N_s$. Het minimum $T_M$ en het algebra\"isch 
 product $T_P$ zijn veelgebruikte t-normen. Bij de t-conormen zijn het maximum $S_M$ en de
 probabilistische som $S_P$ dan weer populaire mogelijkheden. Die operatoren worden als 
@@ -211,7 +210,7 @@ veralgemenen tot bewerkingen op vaagverzamelingen.
 Het $\mathcal{N}$-complement $co_\mathcal{N} A$ van een vaagverzameling $A$ in $X$ wordt gedefinieerd
 door de volgende vaagverzameling in X:
 \begin{displaymath}
-(co_\mathcal{N} A)(x) = \mathcal{N}(A(x)),
+(co_\mathcal{N} A)(x) = \mathcal{N}(A(x))
 \end{displaymath}
 voor alle $x$ in $X$, met $\mathcal{N}$ een negator.
 \end{definitie}
@@ -219,7 +218,7 @@ voor alle $x$ in $X$, met $\mathcal{N}$ een negator.
 De $\mathcal{C}$-doorsnede $A \cap_\mathcal{C} B$ van twee vaagverzamelingen $A$ en $B$ in $X$
 wordt gedefinieerd door de volgende vaagverzameling in $X$:
 \begin{displaymath}
-(A \cap_\mathcal{C} B)(x) = \mathcal{C}(A(x),B(x)),
+(A \cap_\mathcal{C} B)(x) = \mathcal{C}(A(x),B(x))
 \end{displaymath}
 voor alle $x$ in $X$, met $\mathcal{C}$ een conjunctor.
 \end{definitie}
@@ -227,11 +226,11 @@ voor alle $x$ in $X$, met $\mathcal{C}$ een conjunctor.
 De $\mathcal{D}$-unie $A \cup_\mathcal{D} B$ van twee vaagverzamelingen $A$ en $B$ in $X$ wordt gedefinieerd door de
 volgende vaagverzameling in $X$:
 \begin{displaymath}
-(A \cup_\mathcal{D} B)(x) = \mathcal{D}(A(x),B(x)),
+(A \cup_\mathcal{D} B)(x) = \mathcal{D}(A(x),B(x))
 \end{displaymath}
 voor alle $x$ in $X$, met $\mathcal{D}$ een disjunctor.
 \end{definitie}
-
+\noindent
 In het vervolg van deze scriptie zullen we steeds 
 $(\mathcal{N},\mathcal{C},\mathcal{D})=(N_s,T_M,S_M)$ kiezen. We voeren daarom de volgende
 verkorte notaties in:
@@ -296,7 +295,7 @@ Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 
 Het nagaan van de graduele gelijkenis tussen twee vaagverzamelingen -- of tussen twee objecten die 
 identificeerbaar zijn met vaagverzamelingen -- kan aan de hand van \defin{vaagsimilariteitsmaten}. 
-Een dergelijke similariteitsmaat voor het vergelijken van twee vaagverzamelingen in een 
+Een dergelijke maat voor het vergelijken van twee vaagverzamelingen in een 
 universum $X$, is niets meer dan een vaagverzameling in $\mathcal{F}(X) \times \mathcal{F}(X)$. De 
 lidmaatschapsgraad van een koppel $(A,B) \in (\mathcal{F}(X))^2$ nadert daarbij naar 1 naarmate 
 de similariteit tussen de vaagverzamelingen $A$ en $B$ toeneemt.
@@ -310,17 +309,16 @@ $$
 M_1(A,B) = 1 - \left(\frac{1}{|X|} \sum_{x \in X} | A(x) - B(x)|^r\right)^\frac{1}{r} \textrm{ met } 
 r \in \{1,2,3,\ldots\}
 $$ tot de keuzes
-$r=1,2,4$. De overeenkomstige similariteitsmaten noemen we $M_{1a}$, $M_{1b}$ en $M_{1c}$. Vermits
+$r=1,2,4$. De overeenkomstige vaagsimilariteitsmaten noemen we $M_{1a}$, $M_{1b}$ en $M_{1c}$. Vermits
 $M_{1a}=M_{18c}$ hoeven we $M_{18c}$ dan niet meer te beschouwen. 
 Bovendien zullen we ons enkel
 toespitsen op de maten die rechtstreeks uitbreidbaar zijn naar L-vaagverzamelingen met $L=[0,1]^3$. 
-Dit houdt in dat we enkel de maten beschouwen die op evidente wijze kunnen veralgemeend worden naar
+Dat houdt in dat we enkel de maten beschouwen die op evidente wijze kunnen veralgemeend worden naar
 vaagverzamelingen in $\mathcal{F}_L(X) \times \mathcal{F}_L(X)$. De details van die
 uitbreiding behandelen we in \ref{sectie:pixelgeb_kleurbeelden}. 
-
-Zo komen we uiteindelijk tot
-de similariteitsmaten die worden weergegeven in tabel~\ref{tab:similatiteitsmaten}. 
-Alle vaagsimilariteitsmaten uit die tabel zijn reflexief en symmetrisch. Dat wil zeggen dat 
+We komen zo uiteindelijk tot
+de vaagsimilariteitsmaten die worden weergegeven in tabel~\ref{tab:similatiteitsmaten}. 
+Alle maten uit die tabel zijn reflexief en symmetrisch. Dat wil zeggen dat 
 voor elke maat $M$ geldt: $M(A,A)=1$ en $M(A,B)=M(B,A)$. 
 
 \begin{table}[!bp]
